--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
+  firebase_auth: ^0.6.2+1
+  cloud_firestore: ^0.8.2+3
   flutter:
     sdk: flutter
 
