--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ environment:
 dependencies:
   firebase_auth: ^0.6.2+1
   cloud_firestore: ^0.8.2+3
+  google_sign_in: ^3.2.4
   flutter:
     sdk: flutter
 
