--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
+  flutter_staggered_grid_view: "^0.2.4"
   firebase_auth: ^0.6.2+1
   cloud_firestore: ^0.8.2+3
   google_sign_in: ^3.2.4
@@ -42,6 +43,10 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
     - assets/img/food4.jpg
+    - assets/img/food5.jpg
+    - assets/img/food3.jpg
+    - assets/img/foot2.jpg
+    - assets/img/food1.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
